--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,10 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ms-auto mb-2 mb-lg-0 justify-content-center">
+              <ul class="navbar-nav ms-auto mb-2 mb-lg-0 justify-content-center" id="nav">
+                <li class="d-inline d-lg-none">
+                  <button data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" class="btn-close float-end"></button>
+              </li>
                 <li class="nav-item">
                   <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                 </li>
@@ -43,12 +46,12 @@
                 <li class="nav-item">
                   <a class="nav-link active" href="./contact.html">Contact Us</a>
                 </li>
+                  <li class="nav-item">
+                    <a class="nav-link btn btn-mono-black text-white px-3 register-btn ms-xl-5" href="./login.html">Sign Up</a>
+                  </li>
               </ul>
-              <ul class="navbar-nav ms-auto mb-2 mb-lg-0 nav-mark">
-                <li class="nav-item">
-                  <a class="nav-link btn btn-mono-black text-white px-3 register-btn" href="./login.html">Sign Up</a>
-                </li>
-              </ul>
+              
+              
             </div>
           </div>
         </nav>
