--- a/communities.html
+++ b/communities.html
@@ -104,7 +104,16 @@
             <p class="tx-36 fw-bold mb-md-5">Meet Our Communities</p>
            <div class="row justify-content-between">
             <div class="col-md-6 col-lg-7">
-              <img src="./assets/img/community2.png" class="img-fluid" alt="" srcset="">
+              <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./assets/img/community2.png" class="d-block w-100 me-3" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/img/community2b.png" class="d-block w-100 me-3" alt="...">
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="col-md-6 col-lg-4 mt-4 mt-md-0">
               <div class="d-flex flex-column h-100 justify-content-center align-items-start">
@@ -140,14 +149,32 @@
               </div>
             </div>
               <div class="col-md-6 col-lg-7 order-md-2 order-1">
-                <img src="./assets/img/community3.png" class="img-fluid" alt="" srcset="">
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="./assets/img/community3.png" class="d-block w-100 me-3" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="./assets/img/community3b.png" class="d-block w-100 me-3" alt="...">
+                    </div>
+                  </div>
+                </div>
               </div>
               
             </div>
 
             <div class="row justify-content-between my-5">
               <div class="col-md-6 col-lg-7">
-                <img src="./assets/img/commuinity4.png" class="img-fluid" alt="" srcset="">
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="./assets/img/commuinity4.png" class="d-block w-100 me-3" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="./assets/img/community4b.png" class="d-block w-100 me-3" alt="...">
+                    </div>
+                  </div>
+                </div>
               </div>
               <div class="col-md-6 col-lg-4 mt-4 mt-md-0">
                 <div class="d-flex flex-column h-100 justify-content-center align-items-start">
@@ -182,7 +209,16 @@
               </div>
             </div>
               <div class="col-md-6 col-lg-7 order-md-2 order-1">
-                <img src="./assets/img/commuinity6.png" class="img-fluid" alt="" srcset="">
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="./assets/img/commuinity6.png" class="d-block w-100 me-3" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="./assets/img/community5b.png" class="d-block w-100 me-3" alt="...">
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
