--- a/index.html
+++ b/index.html
@@ -94,8 +94,18 @@
             </div>
             
           </div>
-          <div class="col-md-6 col-12 mt-3 count-right order-1 order-md-2" data-aos="fade-left" data-aos-duration="2000">
-            <div class="bg-red p-3 neg-box-x">
+          <div class="col-md-6 col-12 mt-3 count-right order-1 order-md-2 pos-rel" data-aos="fade-left" data-aos-duration="2000">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./assets/img/BG.png" class="d-block w-100 me-3" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/img/BG2.png" class="d-block w-100 me-3" alt="...">
+                </div>
+              </div>
+            </div>
+            <div class="bg-red p-3 neg-box-x pos-abs">
               <div class="d-flex text-white">
                 <img src="./assets/img/icons/location.svg" class="img-fluid me-3" alt="" srcset="">
                 <div>
@@ -210,7 +220,7 @@
       </div>
     </section>
     <section class="bg-mono" id="plan">
-      <div class="container py-md-5 py-3" data-aos="zoom-out">
+      <div class="container py-md-5 py-3" data-aos="zoom-">
         <div class="col-xl-10 col-lg-11 mx-auto text-white">
           <h4 class="text-center text-white fw-bold">Pricing Plan</h4>
           <p class="text-center">Ante nunc egestas senectus mattis varius pretium leo.</p>
@@ -458,13 +468,15 @@
     </section>
     <section class="booking bg-light">
       <div class="container py-md-5 py-3 text-center col-xl-9 mx-auto col-md-10">
-        <p class="tx-24 fw-bold mb-1">Already made a booking?</p>
-        <p class="tx-gray fw-medium">Please enter the booking id sent to you to view or edit your details </p>
-        <input type="text" class="form-control shadow book-input" placeholder="Enter Booking ID">
-        <div class="my-3 col-md-4 mx-auto">
-          <button class="btn btn-black shadow text-white w-100">Search for Booking</button>
+        <div class="pb-md-5 pt-md-3">
+          <p class="tx-24 fw-bold mb-1">Already made a booking?</p>
+          <p class="tx-gray fw-medium">Please enter the booking id sent to you to view or edit your details </p>
+          <input type="text" class="form-control shadow book-input" placeholder="Enter Booking ID">
+          <div class="my-3 col-md-4 mx-auto">
+            <button class="btn btn-black shadow text-white w-100">Search for Booking</button>
+          </div>
+          <a href="" class="fw-semibold mt-5 d-block">Find more answers to anything you need in our Help Center</a>
         </div>
-        <a href="" class="fw-semibold mt-5 d-block">Find more answers to anything you need in our Help Center</a>
       </div>
     </section>
     <footer class="bg-mono">
