--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
     </section>
     <section class="booking bg-light">
       <div class="container py-md-5 py-3 text-center col-xl-9 mx-auto col-md-10">
-        <div class="pb-md-5 pt-md-3">
+        <div class="pb-md-5 pt-md-3 py-3">
           <p class="tx-24 fw-bold mb-1">Already made a booking?</p>
           <p class="tx-gray fw-medium">Please enter the booking id sent to you to view or edit your details </p>
           <input type="text" class="form-control shadow book-input" placeholder="Enter Booking ID">
