--- a/index.html
+++ b/index.html
@@ -582,16 +582,15 @@
                       <div class="card bg-blue text-white h-100 pos-rel">
                           <div class="card-body p-4 card-mobile">
                             <p class="customer-bottom">Mi dignissim mauris urna nunc non egestas nulla ultricies.
-                               Libero suspendisse morbi pellentesque eget et sapien. 
-                               Consectetur ornare maecenas neque arcu, elementum turpis sagittis arcu convallis. Leo nunc id fermentum ipsum. Mi, ultrices convallis ut adipiscing porttitor dolor aliquam. Et elementum.</p>
+                               Libero suspendisse morbi pellentesque eget et sapien.  arcu convallis. Leo nunc id fermentum ipsum. Mi, ultrices convallis ut adipiscing porttitor dolor aliquam. Et elementum.</p>
                               <div class="pt-md-5 pt-4">
                                 <div class="d-flex pt-3 pos-bottom">
                                   <div>
                                     <img src="./assets/img/customer1.png" class="img rounded-circle img-fluid me-2">
                                   </div>
                                   <div>
-                                    <p class="tx-18 fw-bold mb-2">Pedro Ibanez</p>
-                                    <p class="mb-0">UI Designer at Google</p>
+                                    <p class="tx-18 fw-bold mb-2">Metinex Ibanez</p>
+                                    <p class="mb-0">UX Designer at Google</p>
                                   </div>
                                 </div>
                               </div>
