--- a/blog.html
+++ b/blog.html
@@ -288,14 +288,57 @@
                       </div>
                     </div>
                   </div>
-
-
                 </div>
-
-              
             </div>
           </div>
-
+        </div>
+      </section>
+      <section class="next bg-grey-light">
+        <div class="container py-md-5 py-3">
+          <div class="pb-md-5 pt-md-0 py-2">
+            <p class="tx-40 fw-bold mb-1 text-center">What to Read Next</p>
+            <div class="row py-4">
+              <div class="col-md-4 col-12 next-mobile">
+                <p class="tx-24 mb-2">Previous Post</p>
+                <div class="card card-body shadow-sm border-0 p-lg-5 pos-rel h-100">
+                  <p class="tx-24 fw-bold mb-0">Integer quis vel ac ac pulvinar scelerisque.</p>
+                  <div class="text-center mt-lg-1 mt-md-3 mt-3"> 
+                    <span class="down-box">
+                      <div class="d-flex flex-column h-100 justify-content-center align-items-center btn-black  arrow-box">
+                      <img src="./assets/img/icons/arrow-down.svg" alt="" srcset="">
+                      </div>
+                    </span>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 col-12 next-mobile mt-md-0">
+                <p class="tx-24 mb-2 text-md-center">Related Post</p>
+                <div class="card card-body shadow-sm border-0 p-lg-5 pos-rel btn-black text-white h-100">
+                  <p class="tx-24 fw-bold mb-0">Montes, volutpat risus sem mattis dapibus. </p>
+                  <div class="text-center mt-lg-1 mt-md-3 mt-3"> 
+                    <span class="down-box">
+                      <div class="d-flex flex-column h-100 justify-content-center align-items-center bg-white  arrow-box shadow-sm">
+                      <img src="./assets/img/icons/down-dark.svg" alt="" srcset="">
+                      </div>
+                    </span>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 col-12 next-mobile mt-md-0">
+                <p class="tx-24 mb-2 text-md-end">Next Post</p>
+                <div class="card card-body shadow-sm border-0 p-lg-5 pos-rel h-100">
+                  <p class="tx-24 fw-bold mb-0">Viverra sed vel in odio amet eget dictumst.</p>
+                  <div class="text-center mt-lg-1 mt-md-3 mt-3"> 
+                    <span class="down-box">
+                      <div class="d-flex flex-column h-100 justify-content-center align-items-center btn-black  arrow-box">
+                      <img src="./assets/img/icons/arrow-down.svg" alt="" srcset="">
+                      </div>
+                    </span>
+                  </div>
+                </div>
+              </div>
+            </div>            
+          </div>
         </div>
       </section>
     <footer class="bg-mono">
