--- a/community-blog.html
+++ b/community-blog.html
@@ -35,7 +35,7 @@
                   <a class="nav-link active" href="./communities.html">Communities</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./events.html">Events</a>
+                  <a class="nav-link" href="./events.html.html">Events</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./cafe.html">Cafe</a>
@@ -105,10 +105,10 @@
                    <span class="fw-bold">07</span>
                    Aug
                  </div>
-                 <div class="mt-3 col-lg-6 col-xl-4 col-md-6">
+                 <div class="mt-1 col-lg-6 col-xl-4 col-md-6">
                  <p class="fw-bold text-white mb-0">Sip and Paint.</p>
                    <p class="text-white tx-12 fw-light mb-1">In eu egestas risus quis pellentesque.</p>
-                   <a href="./events">
+                   <a href="./events.html">
                   <img src="./assets/img/icons/arrow-forward.svg" class="img-fluid" alt="" srcset="">
                   </a>
                  </div>
@@ -133,10 +133,10 @@
                    <span class="fw-bold">07</span>
                    Aug
                  </div>
-                 <div class="mt-3">
+                 <div class="mt-1">
                  <p class="fw-bold text-white mb-0">Palmwine Festival 2021</p>
                    <p class="text-white tx-12 fw-light mb-1">In eu egestas risus quis pellentesque.</p>
-                   <a href="./events">
+                   <a href="./events.html">
                   <img src="./assets/img/icons/arrow-forward.svg" class="img-fluid" alt="" srcset="">
                   </a>
                  </div>
@@ -161,10 +161,10 @@
                    <span class="fw-bold">07</span>
                    Aug
                  </div>
-                 <div class="mt-3">
+                 <div class="mt-1">
                  <p class="fw-bold text-white mb-0">Palmwine Festival 2021</p>
                    <p class="text-white tx-12 fw-light mb-1">In eu egestas risus quis pellentesque.</p>
-                   <a href="./events">
+                   <a href="./events.html">
                   <img src="./assets/img/icons/arrow-forward.svg" class="img-fluid" alt="" srcset="">
                   </a>
                  </div>
