single event page

--- a/events.html
+++ b/events.html
@@ -31,13 +31,13 @@
                   <button data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" class="btn-close float-end"></button>
               </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                  <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./communities.html">Communities</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./single-event.html.html">Events</a>
+                  <a class="nav-link active" href="./events.html">Events</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./cafe.html">Cafe</a>
