--- a/community-blog.html
+++ b/community-blog.html
@@ -35,7 +35,7 @@
                   <a class="nav-link active" href="./communities.html">Communities</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./events.html.html">Events</a>
+                  <a class="nav-link" href="./events.html">Events</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./cafe.html">Cafe</a>
