--- a/events.html
+++ b/events.html
@@ -105,8 +105,8 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-1 text-center">
-                <button class="btn bg-red search-box shadow-sm h-100 rounded">
+              <div class="col-md-1 col-12 mt-4 mt-md-0 text-center">
+                <button class="btn bg-red search-box shadow-sm h-100 rounded w-100">
                   <img src="./assets/img/icons/search.svg " alt="" class="img-fluid" srcset="">
                 </button>
                 </div>
@@ -120,7 +120,7 @@
     <div class="container py-md-5 py-4">
       <p class="tx-24 fw-bold">Past Events</p>
       <div class="row">
-        <div class="col-md-4 col-12 my-3">
+        <div class="col-md-6 col-lg-4 col-12 my-3">
           <div class="card card-body border-0 bg-transparent event-side-new h-100">
             <div class="d-flex">
               <div class="rounded text-center food-box me-2">
@@ -137,7 +137,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-12 my-3">
+        <div class="col-md-6 col-lg-4 col-12 my-3">
           <div class="card card-body border-0 shadow-sm h-100 p-4">
             <div class="date-box tx-14 tx-gray text-center">
               <span class="fw-bold">07</span>
@@ -151,7 +151,7 @@
             </p>
           </div>
         </div>
-        <div class="col-md-4 col-12 my-3">
+        <div class="col-md-6 col-lg-4 col-12 my-3">
           <div class="card card-body border-0 bg-transparent event-side h-100">
             <div class="d-flex">
               <div class="rounded text-center food-box me-2">
@@ -181,7 +181,7 @@
            </div>
           </div>
         </div>
-        <div class="col-md-4 col-12 my-3">
+        <div class="col-md-6 col-lg-4 col-12 my-3">
           <div class="card card-body border-0 bg-transparent event-side h-100">
             <div class="d-flex">
               <div class="rounded text-center food-box me-2">
@@ -211,7 +211,7 @@
            </div>
           </div>
         </div>
-        <div class="col-md-4 col-12 my-3">
+        <div class="col-md-6 col-lg-4 col-12 my-3">
           <div class="card card-body border-0 bg-transparent event-side h-100">
             <div class="d-flex">
               <div class="rounded text-center food-box me-2">
@@ -241,7 +241,7 @@
            </div>
           </div>
         </div>
-        <div class="col-md-4 col-12 my-3">
+        <div class="col-md-6 col-lg-4 col-12 my-3">
           <div class="card card-body border-0 bg-transparent event-side h-100">
             <div class="d-flex">
               <div class="rounded text-center food-box me-2">
@@ -298,7 +298,7 @@
         </div>
       </div>
       <div class="row mb-md-5">
-        <div class="col-md-4 col-12 my-3">
+        <div class="col-md-6 col-lg-4 col-12 my-3">
           <div class="card card-body border-0 bg-transparent event-side h-100">
             <div class="d-flex">
               <div class="rounded text-center food-box me-2">
@@ -328,7 +328,7 @@
            </div>
           </div>
         </div>
-        <div class="col-md-4 col-12 my-3">
+        <div class="col-md-6 col-lg-4 col-12 my-3">
           <div class="card card-body border-0 bg-transparent event-side h-100">
             <div class="d-flex">
               <div class="rounded text-center food-box me-2">
@@ -358,7 +358,7 @@
            </div>
           </div>
         </div>
-        <div class="col-md-4 col-12 my-3">
+        <div class="col-md-6 col-lg-4 col-12 my-3">
           <div class="card card-body border-0 bg-transparent event-side h-100">
             <div class="d-flex">
               <div class="rounded text-center food-box me-2">
@@ -388,7 +388,7 @@
            </div>
           </div>
         </div>
-        <div class="col-md-4 col-12 my-3">
+        <div class="col-md-6 col-lg-4 col-12 my-3">
           <div class="card card-body border-0 bg-transparent event-side h-100">
             <div class="d-flex">
               <div class="rounded text-center food-box me-2">
@@ -418,7 +418,7 @@
            </div>
           </div>
         </div>
-        <div class="col-md-4 col-12 my-3">
+        <div class="col-md-6 col-lg-4 col-12 my-3">
           <div class="card card-body border-0 bg-transparent event-side h-100">
             <div class="d-flex">
               <div class="rounded text-center food-box me-2">
@@ -448,7 +448,7 @@
            </div>
           </div>
         </div>
-        <div class="col-md-4 col-12 my-3">
+        <div class="col-md-6 col-lg-4 col-12 my-3">
           <div class="card card-body border-0 bg-transparent event-side h-100">
             <div class="d-flex">
               <div class="rounded text-center food-box me-2">
