--- a/single-event.html
+++ b/single-event.html
@@ -138,15 +138,15 @@
                 <p class="tx-20 fw-bold tx-gray">Links</p>
                 <div class="row">
                   <div class="col-6">
-                    <a href="" class="d-block text-white py-2">Home</a>
+                    <a href="./index.html" class="d-block text-white py-2">Home</a>
                     <a href="" class="d-block text-white py-2">Co-working</a>
-                    <a href="" class="d-block text-white py-2">Community</a>
-                    <a href="" class="d-block text-white py-2">Event spaces</a>
+                    <a href="./communities.html" class="d-block text-white py-2">Community</a>
+                    <a href="./events.html" class="d-block text-white py-2">Event spaces</a>
                   </div>
                   <div class="col-6">
-                    <a href="" class="d-block text-white py-2">Banking</a>
-                    <a href="" class="d-block text-white py-2">Cafe</a>
-                    <a href="" class="d-block text-white py-2">FAQs</a>
+                    <a href="./banking.html" class="d-block text-white py-2">Banking</a>
+                    <a href="./cafe.html" class="d-block text-white py-2">Cafe</a>
+                    <a href="./faq.html" class="d-block text-white py-2">FAQs</a>
                   </div>
                 </div>
               </div>
