--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section class="count">
       <div class="container py-md-5 py-3">
         <div class="row">
-          <div class="col-md-6 col-12 mt-3 px-md-3 order-2 order-md-1">
+          <div class="col-md-6 col-12 mt-3 px-md-3 order-2 order-md-1 bg-transparent">
             <div class="col-lg-10 col-xl-9 col-md-11 px-0 py-md-5 py-3">
               <h3 class="fw-bold mb-3">Id ac risus dictum lectus fames pharetra turpis.</h3>
               <p class="fw-semibold tx-18">Enjoy free co-working desks and bookable meeting rooms, fibre-optic Wi-Fi, events and digital banking facilities.</p>
@@ -95,27 +95,37 @@
               </div>
             </div>
             
-          </div>
+          </div> 
           <div class="col-md-6 col-12 mt-3 count-right order-1 order-md-2 pos-rel" data-aos="fade-left" data-aos-duration="2000">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-inner">
+              <div class="carousel-inner over-hidden">
                 <div class="carousel-item active">
                   <img src="./assets/img/BG.png" class="d-block w-100 me-3" alt="...">
+                  <div class="bg-red p-3 neg-box-x pos-abs">
+                    <div class="d-flex text-white">
+                      <img src="./assets/img/icons/location.svg" class="img-fluid me-3" alt="" srcset="">
+                      <div>
+                        <p class="fw-bold mb-1">Lennox Mall</p>
+                        <p class="mb-0 tx-14">Admiralty Way, Lekki Phase I, Lagos</p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="carousel-item">
                   <img src="./assets/img/BG2.png" class="d-block w-100 me-3" alt="...">
+                  <div class="bg-red p-3 neg-box-x pos-abs">
+                    <div class="d-flex text-white">
+                      <img src="./assets/img/icons/location.svg" class="img-fluid me-3" alt="" srcset="">
+                      <div>
+                        <p class="fw-bold mb-1">Atlantic Mall</p>
+                        <p class="mb-0 tx-14">6 Chevron Drive, Eti-Osa, Lagos</p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="bg-red p-3 neg-box-x pos-abs">
-              <div class="d-flex text-white">
-                <img src="./assets/img/icons/location.svg" class="img-fluid me-3" alt="" srcset="">
-                <div>
-                  <p class="fw-bold mb-1">Cafe One Coworking Space</p>
-                  <p class="mb-0 tx-14">Lennox Mall, Admiralty Way, Lekki Phase I, Lagos</p>
-                </div>
-              </div>
-            </div>
+            
           </div>
         </div>
       </div>
