--- a/banking.html
+++ b/banking.html
@@ -291,9 +291,9 @@
                 </p>
                 <a href="tel:+234 82334670000" class="d-block text-white py-2">P.  (+234) 82334670000</a>
                 <p class="py-2 mb-0">
-                  <a href="http://" class="fa fa-instagram text-white tx-24 me-2"></a>
-                  <a href="http://" class="fa fa-youtube-play text-white tx-24 me-2"></a>
-                  <a href="http://" class="fa fa-facebook text-white tx-24"></a>
+                  <a href="./community-blog.html" class="fa fa-instagram text-white tx-24 me-2"></a>
+                  <a href="./community-blog.html" class="fa fa-youtube-play text-white tx-24 me-2"></a>
+                  <a href="./community-blog.html" class="fa fa-facebook text-white tx-24"></a>
                 </p>
               </div>
             </div>
