--- a/communities.html
+++ b/communities.html
@@ -223,50 +223,50 @@
             </div>
           </div>
       </section>
-    <footer class="bg-mono">
-      <div class="container py-md-5 py-4 text-white">
-        <div class="row justify-content-between">
-          <div class="col-md-4 col-xl-4 col-12">
-            <img src="./assets/img/logo-white.svg" class="img-fluid text-white" alt="" srcset="">
-            <p class="mt-4">Tincidunt eu ipsum mauris eu et euismod varius eu. Etiam massa sit nec commodo amet. Mauris non tellus tempus purus cursus. Sed ac ac cursus sit est ac eu at fames.</p>
-          </div>
-          <div class="col-md-8 col-xl-7">
-            <div class="row justify-content-between">
-              <div class="col-md-7 col-xl-7 pt-4 pt-md-0">
-                <p class="tx-20 fw-bold tx-gray">Links</p>
-                <div class="row">
-                  <div class="col-6">
-                    <a href="" class="d-block text-white py-2">Home</a>
-                    <a href="" class="d-block text-white py-2">Co-working</a>
-                    <a href="" class="d-block text-white py-2">Community</a>
-                    <a href="" class="d-block text-white py-2">Event spaces</a>
-                  </div>
-                  <div class="col-6">
-                    <a href="" class="d-block text-white py-2">Banking</a>
-                    <a href="" class="d-block text-white py-2">Cafe</a>
-                    <a href="" class="d-block text-white py-2">FAQs</a>
+      <footer class="bg-mono">
+        <div class="container py-md-5 py-4 text-white">
+          <div class="row justify-content-between">
+            <div class="col-md-4 col-xl-4 col-12">
+              <img src="./assets/img/logo-white.svg" class="img-fluid text-white" alt="" srcset="">
+              <p class="mt-4">Tincidunt eu ipsum mauris eu et euismod varius eu. Etiam massa sit nec commodo amet. Mauris non tellus tempus purus cursus. Sed ac ac cursus sit est ac eu at fames.</p>
+            </div>
+            <div class="col-md-8 col-xl-7">
+              <div class="row justify-content-between">
+                <div class="col-md-7 col-xl-7 pt-4 pt-md-0">
+                  <p class="tx-20 fw-bold tx-gray">Links</p>
+                  <div class="row">
+                    <div class="col-6">
+                      <a href="./index.html" class="d-block text-white py-2">Home</a>
+                      <a href="" class="d-block text-white py-2">Co-working</a>
+                      <a href="./communities.html" class="d-block text-white py-2">Community</a>
+                      <a href="./events.html" class="d-block text-white py-2">Event spaces</a>
+                    </div>
+                    <div class="col-6">
+                      <a href="./banking.html" class="d-block text-white py-2">Banking</a>
+                      <a href="./cafe.html" class="d-block text-white py-2">Cafe</a>
+                      <a href="./faq.html" class="d-block text-white py-2">FAQs</a>
+                    </div>
                   </div>
                 </div>
+                <div class="col-md-5 col-xl-4 pt-4 pt-md-0">
+                  <p class="tx-20 fw-bold tx-gray">Contact Us</p>
+                  <a href="mailto:E.cafe.one@sterling.comm" class="d-block text-white py-2">E.  cafe.one@sterling.com</a>
+                  <p class="py-2 mb-0">A.  Lennox Mall, Admiralty Way. 
+                    Lekki Phase 1. Lagos
+                  </p>
+                  <a href="tel:+234 82334670000" class="d-block text-white py-2">P.  (+234) 82334670000</a>
+                  <p class="py-2 mb-0">
+                    <a href="./community-blog.html" class="fa fa-instagram text-white tx-24 me-2"></a>
+                    <a href="./community-blog.html" class="fa fa-youtube-play text-white tx-24 me-2"></a>
+                    <a href="./community-blog.html" class="fa fa-facebook text-white tx-24"></a>
+                  </p>
+                </div>
               </div>
-              <div class="col-md-5 col-xl-4 pt-4 pt-md-0">
-                <p class="tx-20 fw-bold tx-gray">Contact Us</p>
-                <a href="mailto:E.cafe.one@sterling.comm" class="d-block text-white py-2">E.  cafe.one@sterling.com</a>
-                <p class="py-2 mb-0">A.  Lennox Mall, Admiralty Way. 
-                  Lekki Phase 1. Lagos
-                </p>
-                <a href="tel:+234 82334670000" class="d-block text-white py-2">P.  (+234) 82334670000</a>
-                <p class="py-2 mb-0">
-                  <a href="./community-blog.html" class="fa fa-instagram text-white tx-24 me-2"></a>
-                  <a href="./community-blog.html" class="fa fa-youtube-play text-white tx-24 me-2"></a>
-                  <a href="./community-blog.html" class="fa fa-facebook text-white tx-24"></a>
-                </p>
-              </div>
+              
             </div>
-            
           </div>
         </div>
-      </div>
-    </footer>
+      </footer>
    <!-- Modal -->
    <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl modal-dialog-centered">
