--- a/contact.html
+++ b/contact.html
@@ -214,15 +214,15 @@
                 <p class="tx-20 fw-bold tx-gray">Links</p>
                 <div class="row">
                   <div class="col-6">
-                    <a href="" class="d-block text-white py-2">Home</a>
+                    <a href="./index.html" class="d-block text-white py-2">Home</a>
                     <a href="" class="d-block text-white py-2">Co-working</a>
-                    <a href="" class="d-block text-white py-2">Community</a>
-                    <a href="" class="d-block text-white py-2">Event spaces</a>
+                    <a href="./communities.html" class="d-block text-white py-2">Community</a>
+                    <a href="./events.html" class="d-block text-white py-2">Event spaces</a>
                   </div>
                   <div class="col-6">
-                    <a href="" class="d-block text-white py-2">Banking</a>
-                    <a href="" class="d-block text-white py-2">Cafe</a>
-                    <a href="" class="d-block text-white py-2">FAQs</a>
+                    <a href="./banking.html" class="d-block text-white py-2">Banking</a>
+                    <a href="./cafe.html" class="d-block text-white py-2">Cafe</a>
+                    <a href="./faq.html" class="d-block text-white py-2">FAQs</a>
                   </div>
                 </div>
               </div>
@@ -234,9 +234,9 @@
                 </p>
                 <a href="tel:+234 82334670000" class="d-block text-white py-2">P.  (+234) 82334670000</a>
                 <p class="py-2 mb-0">
-                  <a href="http://" class="fa fa-instagram text-white tx-24 me-2"></a>
-                  <a href="http://" class="fa fa-youtube-play text-white tx-24 me-2"></a>
-                  <a href="http://" class="fa fa-facebook text-white tx-24"></a>
+                  <a href="./community-blog.html" class="fa fa-instagram text-white tx-24 me-2"></a>
+                  <a href="./community-blog.html" class="fa fa-youtube-play text-white tx-24 me-2"></a>
+                  <a href="./community-blog.html" class="fa fa-facebook text-white tx-24"></a>
                 </p>
               </div>
             </div>
