--- a/events.html
+++ b/events.html
@@ -121,7 +121,7 @@
       <p class="tx-24 fw-bold">Past Events</p>
       <div class="row">
         <div class="col-md-6 col-lg-4 col-12 my-3">
-          <div class="card card-body border-0 bg-transparent event-side-new h-100">
+          <div class="card card-body border-0 bg-transparent event-side h-100">
             <div class="d-flex">
               <div class="rounded text-center food-box me-2">
                 <img src="./assets/img/icons/food.svg" class="img-fluid" alt="" srcset="">
@@ -135,20 +135,49 @@
                 </div>
               </div>
             </div>
+           <div class="event-pad">
+             <div class="date-box tx-14 tx-gray text-center">
+               <span class="fw-bold">07</span>
+               Aug
+             </div>
+             <div class="mt-2">
+             <p class="fw-bold text-white mb-0">Sip and Paint.</p>
+               <p class="text-white tx-12 fw-light mb-1">In eu egestas risus quis pellentesque.</p>
+               <a href="./single-event.html">
+              <img src="./assets/img/icons/arrow-forward.svg" class="img-fluid" alt="" srcset="">
+              </a>
+             </div>
+           </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-4 col-12 my-3">
-          <div class="card card-body border-0 shadow-sm h-100 p-4">
-            <div class="date-box tx-14 tx-gray text-center">
-              <span class="fw-bold">07</span>
-              Aug
+          <div class="card card-body border-0 bg-transparent event-side h-100">
+            <div class="d-flex">
+              <div class="rounded text-center food-box me-2">
+                <img src="./assets/img/icons/food.svg" class="img-fluid" alt="" srcset="">
+              </div>
+              <div class="lifestyle-box rounded">
+                <div class="d-flex px-2">
+                  <div>
+                   <img src="./assets/img/icons/lifestyle.svg" class="img-fluid me-2" alt="" srcset="">
+                  </div>
+                  <p class="tx-12 mb-0 pt-1">Lifestyle</p>
+                </div>
+              </div>
             </div>
-            <p class="tx-32 fw-bold mt-3">
-              Fusion Product Launch
-            </p>
-            <p class="tx-gray mt-4 mb-0">
-              Molestie et lobortis hac mi, posuere donec morbi libero non. Ac eu, mi vulputate ipsum, consectetur mattis commodo ut. Ut fusce ut.
-            </p>
+           <div class="event-pad">
+             <div class="date-box tx-14 tx-gray text-center">
+               <span class="fw-bold">07</span>
+               Aug
+             </div>
+             <div class="mt-2">
+             <p class="fw-bold text-white mb-0">Sip and Paint.</p>
+               <p class="text-white tx-12 fw-light mb-1">In eu egestas risus quis pellentesque.</p>
+               <a href="./single-event.html">
+              <img src="./assets/img/icons/arrow-forward.svg" class="img-fluid" alt="" srcset="">
+              </a>
+             </div>
+           </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-4 col-12 my-3">
@@ -481,50 +510,50 @@
       </div>
     </div>
    </section>
-    <footer class="bg-mono">
-      <div class="container py-md-5 py-4 text-white">
-        <div class="row justify-content-between">
-          <div class="col-md-4 col-xl-4 col-12">
-            <img src="./assets/img/logo-white.svg" class="img-fluid text-white" alt="" srcset="">
-            <p class="mt-4">Tincidunt eu ipsum mauris eu et euismod varius eu. Etiam massa sit nec commodo amet. Mauris non tellus tempus purus cursus. Sed ac ac cursus sit est ac eu at fames.</p>
-          </div>
-          <div class="col-md-8 col-xl-7">
-            <div class="row justify-content-between">
-              <div class="col-md-7 col-xl-7 pt-4 pt-md-0">
-                <p class="tx-20 fw-bold tx-gray">Links</p>
-                <div class="row">
-                  <div class="col-6">
-                    <a href="" class="d-block text-white py-2">Home</a>
-                    <a href="" class="d-block text-white py-2">Co-working</a>
-                    <a href="" class="d-block text-white py-2">Community</a>
-                    <a href="" class="d-block text-white py-2">Event spaces</a>
-                  </div>
-                  <div class="col-6">
-                    <a href="" class="d-block text-white py-2">Banking</a>
-                    <a href="" class="d-block text-white py-2">Cafe</a>
-                    <a href="" class="d-block text-white py-2">FAQs</a>
-                  </div>
+   <footer class="bg-mono">
+    <div class="container py-md-5 py-4 text-white">
+      <div class="row justify-content-between">
+        <div class="col-md-4 col-xl-4 col-12">
+          <img src="./assets/img/logo-white.svg" class="img-fluid text-white" alt="" srcset="">
+          <p class="mt-4">Tincidunt eu ipsum mauris eu et euismod varius eu. Etiam massa sit nec commodo amet. Mauris non tellus tempus purus cursus. Sed ac ac cursus sit est ac eu at fames.</p>
+        </div>
+        <div class="col-md-8 col-xl-7">
+          <div class="row justify-content-between">
+            <div class="col-md-7 col-xl-7 pt-4 pt-md-0">
+              <p class="tx-20 fw-bold tx-gray">Links</p>
+              <div class="row">
+                <div class="col-6">
+                  <a href="./index.html" class="d-block text-white py-2">Home</a>
+                  <a href="" class="d-block text-white py-2">Co-working</a>
+                  <a href="./communities.html" class="d-block text-white py-2">Community</a>
+                  <a href="./events.html" class="d-block text-white py-2">Event spaces</a>
+                </div>
+                <div class="col-6">
+                  <a href="./banking.html" class="d-block text-white py-2">Banking</a>
+                  <a href="./cafe.html" class="d-block text-white py-2">Cafe</a>
+                  <a href="./faq.html" class="d-block text-white py-2">FAQs</a>
                 </div>
               </div>
-              <div class="col-md-5 col-xl-4 pt-4 pt-md-0">
-                <p class="tx-20 fw-bold tx-gray">Contact Us</p>
-                <a href="mailto:E.cafe.one@sterling.comm" class="d-block text-white py-2">E.  cafe.one@sterling.com</a>
-                <p class="py-2 mb-0">A.  Lennox Mall, Admiralty Way. 
-                  Lekki Phase 1. Lagos
-                </p>
-                <a href="tel:+234 82334670000" class="d-block text-white py-2">P.  (+234) 82334670000</a>
-                <p class="py-2 mb-0">
-                  <a href="http://" class="fa fa-instagram text-white tx-24 me-2"></a>
-                  <a href="http://" class="fa fa-youtube-play text-white tx-24 me-2"></a>
-                  <a href="http://" class="fa fa-facebook text-white tx-24"></a>
-                </p>
-              </div>
             </div>
-            
+            <div class="col-md-5 col-xl-4 pt-4 pt-md-0">
+              <p class="tx-20 fw-bold tx-gray">Contact Us</p>
+              <a href="mailto:E.cafe.one@sterling.comm" class="d-block text-white py-2">E.  cafe.one@sterling.com</a>
+              <p class="py-2 mb-0">A.  Lennox Mall, Admiralty Way. 
+                Lekki Phase 1. Lagos
+              </p>
+              <a href="tel:+234 82334670000" class="d-block text-white py-2">P.  (+234) 82334670000</a>
+              <p class="py-2 mb-0">
+                <a href="./community-blog.html" class="fa fa-instagram text-white tx-24 me-2"></a>
+                <a href="./community-blog.html" class="fa fa-youtube-play text-white tx-24 me-2"></a>
+                <a href="./community-blog.html" class="fa fa-facebook text-white tx-24"></a>
+              </p>
+            </div>
           </div>
+          
         </div>
       </div>
-    </footer>
+    </div>
+  </footer>
    <!-- Modal -->
    <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl modal-dialog-centered">
