--- a/index.html
+++ b/index.html
@@ -68,32 +68,35 @@
     <section class="count">
       <div class="container py-md-5 py-3">
         <div class="row">
-          <div class="col-md-6 col-12 mt-3 px-md-3 order-2 order-md-1 bg-transparent">
-            <div class="col-lg-10 col-xl-9 col-md-11 px-0 py-md-5 py-3">
-              <h3 class="fw-bold mb-3">Id ac risus dictum lectus fames pharetra turpis.</h3>
-              <p class="fw-semibold tx-18">Enjoy free co-working desks and bookable meeting rooms, fibre-optic Wi-Fi, events and digital banking facilities.</p>
-              <p class="fw-semibold tx-20 mb-1">Operating Hours</p>
-              <p class="mb-0">Monday - Friday: 8am - 8pm</p>
-              <p class="mb-0">Saturady & Holidays: 10am - 8pm</p>
-              <p class="mb-0">Sunday:  Closed</p>
+          <div class="col-md-6 col-12 mt-3 order-2 order-md-1 bg-transparent">
+            <div class="d-flex flex-column h-100 justify-content-center align-items-start">
+              <div class="col-lg-10 col-xl-9 col-md-11 px-0 py-3">
+                <h3 class="fw-bold mb-3">Id ac risus dictum lectus fames pharetra turpis.</h3>
+                <p class="fw-semibold tx-18">Enjoy free co-working desks and bookable meeting rooms, fibre-optic Wi-Fi, events and digital banking facilities.</p>
+                <p class="fw-semibold tx-20 mb-1">Operating Hours</p>
+                <p class="mb-0">Monday - Friday: 8am - 8pm</p>
+                <p class="mb-0">Saturady & Holidays: 10am - 8pm</p>
+                <p class="mb-0">Sunday:  Closed</p>
+              </div>
+              <div class="row py-4 col-12">
+                <div class="col-md-4 col-6 mt-2">
+                  <img src="./assets/img/icons/User.svg" class="img-fluid" alt="" srcset="">
+                  <h4 class="fw-bold">5K+</h4>
+                  <p class="tx-14 tx-gray">Startup mentors</p>
+                </div>
+                <div class="col-md-4 col-6  mt-2">
+                  <img src="./assets/img/icons/Users.svg" class="img-fluid" alt="" srcset="">
+                  <h4 class="fw-bold">200+</h4>
+                  <p class="tx-14 tx-gray">Communities inside</p>
+                </div>
+                <div class="col-md-4 mt-2">
+                  <img src="./assets/img/icons/wifi.svg" class="img-fluid" alt="" srcset="">
+                  <h4 class="fw-bold">500 Mbps</h4>
+                  <p class="tx-14 tx-gray">Internet speed</p>
+                </div>
+              </div>
             </div>
-            <div class="row py-4">
-              <div class="col-md-4 col-6 mt-2">
-                <img src="./assets/img/icons/User.svg" class="img-fluid" alt="" srcset="">
-                <h4 class="fw-bold">5K+</h4>
-                <p class="tx-14 tx-gray">Startup mentors</p>
-              </div>
-              <div class="col-md-4 col-6  mt-2">
-                <img src="./assets/img/icons/Users.svg" class="img-fluid" alt="" srcset="">
-                <h4 class="fw-bold">200+</h4>
-                <p class="tx-14 tx-gray">Communities inside</p>
-              </div>
-              <div class="col-md-4 mt-2">
-                <img src="./assets/img/icons/wifi.svg" class="img-fluid" alt="" srcset="">
-                <h4 class="fw-bold">500 Mbps</h4>
-                <p class="tx-14 tx-gray">Internet speed</p>
-              </div>
-            </div>
+           
             
           </div> 
           <div class="col-md-6 col-12 mt-3 count-right order-1 order-md-2 pos-rel" data-aos="fade-left" data-aos-duration="2000">
@@ -615,16 +618,18 @@
       </div>
     </section>
     <section class="booking bg-light">
-      <div class="container py-md-5 py-3 text-center col-xl-9 mx-auto col-md-10">
-        <div class="pb-md-5 pt-md-3 py-3">
-          <p class="tx-24 fw-bold mb-1">Already made a booking?</p>
-          <p class="tx-gray">Please enter the booking id sent to you to view or edit your details </p>
-          <input type="text" class="form-control shadow book-input" placeholder="Enter Booking ID">
-          <div class="my-3 col-md-4 mx-auto">
-            <button class="btn btn-black shadow text-white w-100">Search for Booking</button>
+      <div class="container py-md-5 py-3 text-center">
+          <div class="col-xl-8 col-lg-9 col-md-10 mx-auto">
+            <div class="pb-md-5 pt-md-3 py-3">
+              <p class="tx-24 fw-bold mb-1">Already made a booking?</p>
+              <p class="tx-gray">Please enter the booking id sent to you to view or edit your details </p>
+              <input type="text" class="form-control shadow book-input" placeholder="Enter Booking ID">
+              <div class="my-3 col-md-4 mx-auto">
+                <button class="btn btn-black shadow text-white w-100">Search for Booking</button>
+              </div>
+              <a href="" class="fw-semibold mt-5 d-block">Find more answers to anything you need in our Help Center</a>
+            </div>
           </div>
-          <a href="" class="fw-semibold mt-5 d-block">Find more answers to anything you need in our Help Center</a>
-        </div>
       </div>
     </section>
   
@@ -641,15 +646,15 @@
                 <p class="tx-20 fw-bold tx-gray">Links</p>
                 <div class="row">
                   <div class="col-6">
-                    <a href="" class="d-block text-white py-2">Home</a>
+                    <a href="./index.html" class="d-block text-white py-2">Home</a>
                     <a href="" class="d-block text-white py-2">Co-working</a>
-                    <a href="" class="d-block text-white py-2">Community</a>
-                    <a href="" class="d-block text-white py-2">Event spaces</a>
+                    <a href="./communities.html" class="d-block text-white py-2">Community</a>
+                    <a href="./events.html" class="d-block text-white py-2">Event spaces</a>
                   </div>
                   <div class="col-6">
-                    <a href="" class="d-block text-white py-2">Banking</a>
-                    <a href="" class="d-block text-white py-2">Cafe</a>
-                    <a href="" class="d-block text-white py-2">FAQs</a>
+                    <a href="./banking.html" class="d-block text-white py-2">Banking</a>
+                    <a href="./cafe.html" class="d-block text-white py-2">Cafe</a>
+                    <a href="./faq.html" class="d-block text-white py-2">FAQs</a>
                   </div>
                 </div>
               </div>
@@ -661,9 +666,9 @@
                 </p>
                 <a href="tel:+234 82334670000" class="d-block text-white py-2">P.  (+234) 82334670000</a>
                 <p class="py-2 mb-0">
-                  <a href="http://" class="fa fa-instagram text-white tx-24 me-2"></a>
-                  <a href="http://" class="fa fa-youtube-play text-white tx-24 me-2"></a>
-                  <a href="http://" class="fa fa-facebook text-white tx-24"></a>
+                  <a href="./community-blog.html" class="fa fa-instagram text-white tx-24 me-2"></a>
+                  <a href="./community-blog.html" class="fa fa-youtube-play text-white tx-24 me-2"></a>
+                  <a href="./community-blog.html" class="fa fa-facebook text-white tx-24"></a>
                 </p>
               </div>
             </div>
