--- a/cafe.html
+++ b/cafe.html
@@ -61,8 +61,10 @@
       <div class="container">
         <div class="col-lg-4 col-md-6 mx-auto text-white top-pad">
         <p class="fw-bold tx-36 mx-auto text-center">Café One X Vestar Coffee.</p>
+        <div class="col-xl-8 mx-auto">
+          <a href="#order" class="btn btn-black shadow text-white w-100 fw-semibold py-2 tx-18 fw-bold mt-4" type="button">View Menu</a>
+        </div>
 
-          <button class="btn btn-black shadow text-white w-100 fw-semibold py-2 tx-18 fw-bold mt-4" type="button" data-bs-toggle="modal" data-bs-target="#contactModal">View Menu</button>
         </div>
       </div>
     </section>
@@ -339,7 +341,7 @@
                   </table>
                 </div>
                 <div class="margin-long-top mb-2">
-                  <button class="btn btn-lg btn-black shadow text-white w-100 fw-semibold py-2 tx-18 fw-bold" type="button">Pay Now</button>
+                  <button class="btn btn-lg btn-black shadow text-white w-100 fw-semibold py-2 tx-18 fw-bold" type="button"  data-bs-toggle="modal" data-bs-target="#orderModal">Checkout</button>
                 </div>
               </div>
           </div>
@@ -369,15 +371,15 @@
                 <p class="tx-20 fw-bold tx-gray">Links</p>
                 <div class="row">
                   <div class="col-6">
-                    <a href="" class="d-block text-white py-2">Home</a>
+                    <a href="./index.html" class="d-block text-white py-2">Home</a>
                     <a href="" class="d-block text-white py-2">Co-working</a>
-                    <a href="" class="d-block text-white py-2">Community</a>
-                    <a href="" class="d-block text-white py-2">Event spaces</a>
+                    <a href="./communities.html" class="d-block text-white py-2">Community</a>
+                    <a href="./events.html" class="d-block text-white py-2">Event spaces</a>
                   </div>
                   <div class="col-6">
-                    <a href="" class="d-block text-white py-2">Banking</a>
-                    <a href="" class="d-block text-white py-2">Cafe</a>
-                    <a href="" class="d-block text-white py-2">FAQs</a>
+                    <a href="./banking.html" class="d-block text-white py-2">Banking</a>
+                    <a href="./cafe.html" class="d-block text-white py-2">Cafe</a>
+                    <a href="./faq.html" class="d-block text-white py-2">FAQs</a>
                   </div>
                 </div>
               </div>
@@ -389,9 +391,9 @@
                 </p>
                 <a href="tel:+234 82334670000" class="d-block text-white py-2">P.  (+234) 82334670000</a>
                 <p class="py-2 mb-0">
-                  <a href="http://" class="fa fa-instagram text-white tx-24 me-2"></a>
-                  <a href="http://" class="fa fa-youtube-play text-white tx-24 me-2"></a>
-                  <a href="http://" class="fa fa-facebook text-white tx-24"></a>
+                  <a href="./community-blog.html" class="fa fa-instagram text-white tx-24 me-2"></a>
+                  <a href="./community-blog.html" class="fa fa-youtube-play text-white tx-24 me-2"></a>
+                  <a href="./community-blog.html" class="fa fa-facebook text-white tx-24"></a>
                 </p>
               </div>
             </div>
@@ -400,20 +402,56 @@
         </div>
       </div>
     </footer>
+
    <!-- Modal -->
-   <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
+   <div class="modal fade" id="orderModal" tabindex="-1" aria-labelledby="orderModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl modal-dialog-centered">
       <div class="modal-content p-md-4 shadow-sm">
         <div class="modal-header border-bottom-0">
-          <p class="modal-title tx-36 fw-bold" id="contactModalLabel">Confirm your booking</p>
+          <p class="modal-title tx-36 fw-bold" id="orderModalLabel">Confirm your order details</p>
           <button type="button" class="btn-close tx-dark" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
           <div class="row justify-content-between">
-            <div class="col-md-6 col-lg-5 col-12">
+            <div class="col-md-7 col-lg-7 col-12">
               <div class="card card-body px-0 bg-transparent border-0">
-                <p class="tx-24 fw-bold">Enter your contact details</p>
-                <form action="">
+                <p class="tx-24 fw-bold">Delivery Address</p>
+                <div class="btn-mono-black py-3 px-4">
+                  <div class="radio-check d-flex justify-content-between align-items-center">
+                    <label class="ps-0" for="address1">
+                      <div>
+                        <p class="mb-0 fw-bold mb-1">Pickup</p>
+                       <p class="mb-0"> Lennox Mall, Admiralty Way. Lekki Phase 1, Lagos </p>
+                      </div>
+                    </label>
+                    <input type="radio" name="address" class="align-radio" id="address1"/>
+                 </div>
+                </div>
+                <div class="btn-mono-black mt-4 py-3 px-4">
+                  <div class="radio-check d-flex justify-content-between align-items-center">
+                    <label class="ps-0" for="address2">
+                      <div>
+                        <p class="mb-1 fw-bold">Pickup</p>
+                       <p class="mb-0"> Atlantic Mall, 6 Chevron Drive. Eti-Osa, Lagos </p>
+                      </div>
+                    </label>
+                    <input type="radio" name="address" class="align-radio" id="address2"/>
+                 </div>
+                </div>
+                <div class="btn-mono-black mt-4 py-3 px-4">
+                  <div class="radio-check d-flex justify-content-between align-items-center">
+                    <label class="ps-0" for="address3">
+                      <div>
+                        <p class="mb-1 fw-bold">Shox Adomokai</p>
+                       <p class="mb-0"> 176 Street Name, City, State POST CODE, Country <br/>
+                        Phone: 4045235155 </p>
+                      </div>
+                    </label>
+                    <input type="radio" name="address" class="align-radio" id="address3"/>
+                 </div>
+                </div>
+                <p class="tx-20 fw-bold mt-3">Use this Address</p>
+                <form action="" class="mt-4">
                   <div class="mb-4">
                     <label for="" class="mb-0 tx-gray">Full Name (First and Last Name)</label>
                     <input type="text" class="form-control fusion-white">
@@ -427,37 +465,33 @@
                     <label for="" class="mb-0 tx-gray">Address</label>
                     <input type="text" class="form-control fusion-white">
                   </div>
+                  <div class="mt-4 mb-2">
+                    <button class="btn btn-lg btn-black shadow text-white w-100 fw-semibold py-3 tx-18 fw-bold" type="button">Add Address</button>
+                  </div>
                 </form>
               </div>
             </div>
-            <div class="col-md-6 col-lg-6 col-12 mt-4 mt-md-0">
+            <div class="col-md-5 col-lg-5 col-12 mt-4 mt-md-0">
               <div class="card card-body p-3 bg-transparent border-0 shadow">
                 <div class="table-responsive">
                   <table class="table table-borderless">
                     <thead>
                       <tr>
                         <th scope="col" class="tx-gray">Items</th>
-                        <th scope="col" class="tx-gray">Duration</th>
                         <th scope="col" class="text-end tx-gray">Price</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
-                        <td class="tx-medium">Seat 3A: Sofa and C-Table</td>
-                        <td class="tx-medium">Weekly</td>
-                        <td class="text-end tx-medium">N16,000</td>
-                      </tr>
-                      <tr>
-                        <td class="tx-medium">Seat 5A: Wall Seat</td>
-                        <td class="tx-medium">Monthly</td>
-                        <td class="text-end tx-medium">N63,000</td>
+                        <td class="tx-medium">2 x Iced Cafe Mocha</td>
+                        <td class="text-end tx-medium">N4,000</td>
                       </tr>
                       <tr class="dotted-line">
-                        <td colspan="3"></td>
+                        <td colspan="2"></td>
                       </tr>
                       <tr>
-                        <td class="tx-medium" colspan="2">Total</td>
-                        <td class="text-end tx-medium">N79,000</td>
+                        <td class="tx-medium">Total</td>
+                        <td class="text-end tx-medium">N4,000</td>
                       </tr>
                     </tbody>
                   </table>
