--- a/index.html
+++ b/index.html
@@ -212,22 +212,22 @@
         <div>
           <div class="grid-container">
             <div class="grid-item item1">
-              <img src="./assets/img/Frame 435.png" alt="" srcset="" class="img-fluid">
+              <img src="./assets/img/Frame 435.png" alt="" srcset="" class="img-fluid w-100">
             </div>
             <div class="grid-item item2">
-              <img src="./assets/img/Frame 436.png" alt="" srcset="" class="img-fluid">
+              <img src="./assets/img/Frame 436.png" alt="" srcset="" class="img-fluid w-100">
             </div>
             <div class="grid-item item3">
-              <img src="./assets/img/Frame 437.png" alt="" srcset="" class="img-fluid">
+              <img src="./assets/img/Frame 437.png" alt="" srcset="" class="img-fluid w-100">
             </div>  
             <div class="grid-item item4">
-              <img src="./assets/img/Frame 436.png" alt="" srcset="" class="img-fluid">
+              <img src="./assets/img/Frame 436.png" alt="" srcset="" class="img-fluid w-100">
             </div>
             <div class="grid-item item5">
-              <img src="./assets/img/Frame 435.png" alt="" srcset="" class="img-fluid">
+              <img src="./assets/img/Frame 435.png" alt="" srcset="" class="img-fluid w-100">
             </div>
             <div class="grid-item item6">
-              <img src="./assets/img/Frame 436.png" alt="" srcset="" class="img-fluid">
+              <img src="./assets/img/Frame 436.png" alt="" srcset="" class="img-fluid w-100">
             </div>
 
           </div>
