--- a/cafe.html
+++ b/cafe.html
@@ -349,12 +349,14 @@
       </div>
     </section>
     <section class="booking bg-light">
-      <div class="container py-md-5 py-3 text-center col-xl-9 mx-auto col-md-10">
-        <p class="tx-24 fw-bold mb-1">Track Your Order</p>
-        <p class="tx-gray fw-medium">Please enter the order id sent to you to view or edit your details </p>
-        <input type="text" class="form-control shadow book-input" placeholder="Enter Order ID">
-        <div class="my-3 col-md-4 mx-auto">
-          <button class="btn btn-black shadow text-white w-100">Search for Booking</button>
+      <div class="container py-md-5 py-3 text-center">
+        <div class="col-xl-8 col-lg-9 mx-auto col-md-10">
+          <p class="tx-24 fw-bold mb-1">Track Your Order</p>
+          <p class="tx-gray ">Please enter the order id sent to you to view or edit your details </p>
+          <input type="text" class="form-control shadow book-input" placeholder="Enter Order ID">
+          <div class="my-3 col-md-4 mx-auto">
+            <button class="btn btn-black shadow text-white w-100">Search for Booking</button>
+          </div>
         </div>
       </div>
     </section>
