--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section class="count">
       <div class="container py-md-5 py-3">
         <div class="row">
-          <div class="col-md-6 col-12 mt-3 order-2 order-md-1 bg-transparent">
+          <div class="col-md-6 col-12 order-2 order-md-1 bg-transparent">
             <div class="d-flex flex-column h-100 justify-content-center align-items-start">
               <div class="col-lg-10 col-xl-9 col-md-11 px-0 py-3">
                 <h3 class="fw-bold mb-3">Id ac risus dictum lectus fames pharetra turpis.</h3>
@@ -128,7 +128,7 @@
                 </div>
               </div>
             </div>
-            
+           
           </div>
         </div>
       </div>
@@ -201,6 +201,10 @@
                   Proin nibh dolor odio praesent sit aliquet odio lectus mauris. Mi id dui lorem urna etiam. Magna non morbi sed aliquam eu sit vel. Neque nisi non leo, malesuada. Integer platea sit viverra venenatis lobortis. Mauris sit orci dolor amet quis ac.
                 </p>
             </div>
+
+            <button type="button" class="btn btn-black text-white mt-5" data-bs-toggle="tooltip" data-bs-placement="top" title="Choose seats sample tooltip">
+              Check for tooltip
+            </button>
           </div>
           </div>
         </div>
